--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/node": "^24.1.0",
+    "@types/pg": "^8.15.4"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "mysql2": "^3.14.2",
+    "pg": "^8.16.3"
   }
 }
